--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -347,6 +347,70 @@ a {
         }
       }
     }
+  // Figure
+  figure {
+    figcaption {
+      font: 9px/1.5 'Open Sans', sans-serif;
+      position: absolute;
+      bottom: 15px;
+      right: 0;
+      padding: 2px 10px;
+      padding-left: 19px;
+      background: rgba(#000, 0.66);
+      color: rgba(#FFF, 0.66);
+
+      img.flickr {
+        width: inherit;
+        height: 15px;
+        left: 3px;
+        top:50%;
+        width:inherit !important;
+        z-index: 0 !important;
+
+        }
+      .license {
+        $licenseSize: 12px;
+        vertical-align: middle;
+        margin-left: 2px;
+        display: inline-block;
+        height: 14px;
+        width: 14px;
+        background-size: $licenseSize;
+        background-repeat: no-repeat;
+
+        &.license-cc {
+          background-image:url(../images/cc/cc.svg);
+          &:hover {
+            background-image:url(../images/cc/cc-white.svg);
+            }
+          }
+        &.license-by {
+          background-image:url(../images/cc/by.svg);
+          }
+        &.license-nc {
+          background-image:url(../images/cc/nc.svg);
+          }
+        &.license-nd {
+          background-image:url(../images/cc/nd.svg);
+          }
+        &.license-sa {
+          background-image:url(../images/cc/sa.svg);
+          }
+        &.license-pd {
+          background-image:url(../images/cc/pd.svg);
+          }
+        }
+      a {
+        margin-left: 3px;
+        border: none;
+        color: rgba(#FFF, 0.66);
+
+        &:hover {
+          color: #FFF;
+          }
+        }
+      }
+    }
   // Cover Shout
   &.cover,
   &.shout {
