--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -335,11 +335,13 @@ a {
     border-collapse:collapse;
     border-spacing:0;
     th, td {
-      background:url($dot) 0 100% repeat-x;
+      padding:0px 10px;
+      border-bottom:1px solid $color;
       }
     th {
+      color:white;
+      background-color:$color;
       text-align:left;
-      font-weight:bold;
       }
     &.striped {
       tr:nth-child(even) {
