--- a/index.erb
+++ b/index.erb
@@ -57,7 +57,9 @@
       <% end %>
     <% end %>
 	<div class="progress"><div></div></div>
-    <% (theme.js + meta.js).each do |js| %>
+    <script src="js/jquery-2.1.0.min.js"></script>
+    <script src="js/script.js"></script>
+    <% (meta.js).each do |js| %>
       <script src="<%= js %>"></script>
     <% end %>
   </body>
