--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -75,7 +75,7 @@ a {
     top:0;
     left:0;
     overflow:hidden;
-    padding:$top $right $bottom $left;
+    padding:$top $right 0 $left;
     width:$width - $left - $right;
     height:$height - $top - $bottom;
   }
@@ -372,6 +372,17 @@ a {
       }
     }
   }
+  // iframe
+  iframe {
+    height: 100%;
+    max-height: 440px;
+    width: 100%;
+    box-shadow: 3px 3px 7px rgba(#000, 0.3);
+    border: 1px solid darken(#fff, 10%);
+  }
+  iframe::-webkit-scrollbar {
+    display: none;
+  }
   // Cover Shout
   &.cover,
   &.shout {
@@ -453,6 +464,10 @@ a {
       img, svg, video,
       object, canvas, iframe {
         @content;
+      }
+      iframe {
+        z-index: 0;
+        max-height: none;
       }
     }
     @include cover {
@@ -630,7 +645,7 @@ a {
     top:0;
     left:0;
     overflow:hidden;
-    padding:$top $right $bottom $left;
+    padding:$top $right 0 $left;
     width:$width - $left - $right;
     height:$height - $top - $bottom;
   }
