--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -309,6 +309,21 @@ a {
       margin-left: 160px;
     }
   }
+  &.small {
+    hgroup {
+      padding-top: 20px;
+    }
+    pre {
+      font-size: 19px;
+      min-height: 23px;
+      code {
+        line-height:1.3;
+        &:before {
+          line-height: 1.6em;
+        }
+      }
+    }
+  }
   // Code
   pre {
     margin:0 -10px 28px;
@@ -331,7 +346,7 @@ a {
         position:absolute;
         margin-left:-40px;
         font-size: 0.8em;
-        line-height: 34px;
+        line-height: 2.0em;
         vertical-align: middle;
         color: darken($colorCode, 25%);
         counter-increment:code;
@@ -445,6 +460,8 @@ a {
       h2 {
         font-size: 28px;
         margin-bottom: 0.6em;
+        vertical-align: middle;
+        line-height: 38px;
       }
 
       p {
