--- a/index.erb
+++ b/index.erb
@@ -18,14 +18,14 @@
     </header>
     <% sections.each do |section| %>
       <% if section.number > 0 %>
-        <div id="slide-<%= section.number %>-s" data-section="<%= section.number %>" data-sections="<%= sections.length %>" class="slide chapter">
+        <div id="slide-<%= section.number %>-0" data-section="<%= section.number %>" data-sections="<%= sections.length %>" class="slide chapter">
           <div>
             <hgroup>
               <h2><%= section.title %></h2>
             </hgroup>
           </div>
         </div>
-        <div id="slide-<%= section.number %>-toc" data-section="<%= section.number %>" data-sections="<%= sections.length %>" class="slide toc">
+        <div id="slide-<%= section.number %>-1" data-section="<%= section.number %>" data-sections="<%= sections.length %>" class="slide toc">
           <div>
             <hgroup>
               <h1><%= section.title %></h1>
@@ -43,10 +43,10 @@
         </div>
       <% end %>
       <% section.slides.each do |slide| %>
-        <div id="slide-<%= section.number %>-<%= slide.number %>" data-section="<%= section.number %>" data-sections="<%= sections.length %>" class="slide <%= slide.classes %>">
+        <% title_slide = section.number == 0 && slide.number == 0 %>
+        <div id="slide-<%= slide.id %>" data-section="<%= section.number %>" data-sections="<%= sections.length %>" class="slide <%= slide.classes %>">
           <div>
             <hgroup>
-              <% title_slide = section.number == 0 && slide.number == 0 %>
               <% title, subtitle = title_slide ? [slide.extract_title, slide.extract_subtitle] : [section.title, slide.extract_title] %>
               <h1><%= title %></h1>
               <% if subtitle && !subtitle.empty? %>
@@ -54,7 +54,7 @@
               <% end %>
             </hgroup>
             <%= slide.html %>
-            <% unless section.number == 0 && slide.number == 0 %>
+            <% unless title_slide %>
               <footer>
                 <%# meta.author %>
               </footer>
