--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -206,30 +206,18 @@ a {
     cursor: default;
     background-color: white;
 
-    &.success, &.green {
-      color: white;
-      background-color: $greenDark;
+    @mixin background($color) {
+      &.#{$color} {
+        @extend .bg-#{$color};
+        color: white;
+      }
     }
-    &.alert, &.red {
-      color: white;
-      background-color: $redDark;
+    @each $color in bluegreen blue green purple orange gray {
+      @include background($color);
     }
-    &.info, &.blue {
-      color: white;
-      background-color: $blueDark;
-    }
-    &.purple {
-      color: white;
-      background-color: $purpleDark;
-    }
-    &.bluegreen {
-      color: white;
-      background-color: $bluegreenDark;
-    }
-    &.orange {
-      color: white;
-      background-color: $orangeDark;
-    }
+    &.success { @include background(green); }
+    &.alert { @include background(red); }
+    &.info { @include background(blue); }
   }
   // Quote
   blockquote {
