Add highcharts for charts

--- a/index.erb
+++ b/index.erb
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="<%= css %>">
     <% end %>
     <script src="js/jquery-2.1.0.min.js"></script>
+    <script src="js/highcharts.js"></script>
   </head>
   <body class="list">
     <header class="caption">
