--- a/styles/_increment.scss
+++ b/styles/_increment.scss
@@ -1,19 +1,23 @@
-.disabled {
-  display: none;
-}
 .inactive, .current {
   -webkit-transition: opacity 0.5s ease-in-out 0.0s;
-}
-.visited {
-  -webkit-transition: opacity 0.5s ease-in-out 0.3s;
 }
 .inactive {
   opacity: 0;
 }
-.incr.hover li.visited {
+.visited {
+  -webkit-transition: opacity 0.5s ease-in-out 0.3s;
+  .hide-visited {
+    display: none;
+  }
+  &.hide-visited {
+    display: none;
+  }
+}
+
+.hover li.visited {
   opacity: 0.5;
 }
-.incr li.current {
+li.current {
   opacity: 1;
   //color: $color;
   //font-weight: bold;
@@ -21,7 +25,7 @@
     content:'\2023\00A0\00A0\2009';
   }
 }
-.incr .border-separated {
+.border-separated {
   li {
     -webkit-transition: all 0.5s;
   }
