--- a/styles/_list.scss
+++ b/styles/_list.scss
@@ -102,5 +102,28 @@
         content:counter(slide) '/' attr(data-slides);
       }
     }
+    &.disabled {
+      opacity: 0.8;
+      -webkit-filter: grayscale(100%);
+      &:before {
+        content: '';
+        position: absolute;
+        /* opacity: 0.1; */
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        /* vertical-align: middle; */
+        line-height: 310px;
+        font-size: 100px;
+        color: #F5F5F5;
+        background: rgba(#FFF, 0.4);
+        z-index: 1;
+        /* -webkit-transform: rotate(45deg); */
+        text-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+        text-transform: uppercase;
+      }
+    }
   }
 }
